<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">运维通</string>
    <string name="neterror">网络异常,请检查网络</string>
    <string name="loading">加载中....</string>
    <!-- popwindows -->
    <string name="photo">拍照</string>
    <string name="grapht">从相册中选取</string>
    <string name="consel">取消</string>
    <string name="subment">提交</string>
    <!--login-->
    <string name="mine_login_hine1">请输入账号</string>
    <string name="mine_login_hine2">密码</string>
    <string name="mine_login_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="login">登录</string>
    <string name="mine_login_loginning">登录中</string>
    <string name="splash_adv_logo">西安翔迅科技有限责任公司版权所有 Copyright © 2017</string>
    <string name="loginout">退出登录</string>
    <string name="regest">注册账号</string>
    <string name="find_pass">忘记密码</string>
    <string name="login_succ">登录成功</string>
    <string name="login_nameorpassfail">用户名密码错误</string>
    <string name="login_contain_null">用户名密码不能包含空格</string>
    <string name="login_contain_mode">用户名不能包含表情</string>
    <string name="un_login">未登录</string>

    <!-- 首页-->
    <string name="maintenance_title">运维通</string>
    <string name="maintenance_order">工单管理</string>
    <string name="maintenance_tour">巡检管理</string>
    <string name="maintenance_equipment">设备管理</string>
    <string name="maintenance_notification">通知公告</string>
    <string name="main_titile">工单系统</string>
    <string name="main_work_order">我的工单</string>
    <string name="main_work_order_new">工单接收</string>
    <string name="main_work_order_down">完成工单</string>
    <string name="main_work_order_undown">未完成工单</string>
    <string name="main_work_order_search">搜索条件</string>
    <string name="main_work_order_all">全部工单</string>
    <string name="main_work_map">设备位置</string>
    <string name="main_work_set">设置</string>
    <string name="main_work_not">没有新的工单</string>

    <!-- XListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>mine_login_hine1
    <string name="xlistview_header_hint_ready">释放刷新数据</string>
    <string name="xlistview_header_hint_loading">加载中&#8230;</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">释放载入更多</string>


    <!-- SetActivity-->
    <string name="set_decl">提示</string>
    <string name="set_clean_cache">清理缓存</string>
    <string name="set_clean_cache_des">是否确认清理缓存？</string>
    <string name="set_update">版本更新</string>
    <string name="set_service">配置服务</string>
    <string name="set_update_des">有新版本，是否确认新版本升级？</string>
    <string name="set_loginout">退出登录</string>
    <string name="set_loginout_des">是否确认退出登录？</string>
    <string name="set_sure">确认</string>
    <string name="set_consel">取消</string>

    <string name="curr_service">当前地址：</string>
    <string name="more_update">检查更新</string>
    <string name="more_clear_cache">清空缓存</string>
    <string name="curr_ver">当前版本号：V</string>
    <string name="curr_cache">当前缓存大小：</string>
    <string name="updating">检查更新中</string>
    <string name="more_exit">退出</string>
    <string name="exit_login">确认退出登录？</string>
    <string name="no_clear">无需清除</string>
    <string name="clear_com">确认清空缓存？</string>
    <string name="cache_realy_cleat">缓存已经清除</string>

    <!-- TourActivity-->
    <string name="st_tour_title">新建巡检工单</string>
    <string name="st_tour_title_order">巡检工单详情</string>
    <string name="st_tour_commit">提交</string>
    <string name="description_hint">5~400字</string>


    <!--SearchWorkOrderDIalogFragment-->
    <string name="st_search_commit">搜索</string>
    <string name="st_search_deviceName">设备名称:</string>
    <string name="st_search_deviceName_hint">请输入设备名称</string>
    <string name="st_search_deviceNum">设备编号:</string>
    <string name="st_search_deviceNum_hint">请输入设备编号</string>
    <string name="st_search_deviceIp">设备IP  :</string>
    <string name="st_search_deviceIp_hint">请输入设备IP</string>
    <string name="st_search_deviceStatus">查询状态  :</string>

    <!--WorkOrderDetailActivity-->
    <string name="st_detail_title">工单详情</string>
    <string name="st_equip_title_order">设备详情</string>
    <string name="st_detail_detal">详情</string>
    <string name="st_detail_image">图片</string>
    <string name="st_detail_position">位置</string>
    <!--工单详情信息-->
    <string name="st_detail_detail">工单详情信息</string>
    <string name="st_detail_equip">设备详情信息</string>
    <string name="st_detail_tour">巡检详情信息</string>
    <string name="st_detail_orderid">工单编号:</string>
    <string name="st_detail_complainant">设备名称:</string>
    <string name="st_detail_complainant_time">设备编码:</string>
    <string name="st_detail_complainant_tel">设备IP:</string>
    <string name="st_detail_come">设备类型:</string>
    <string name="st_detail_type">位置信息:</string>
    <string name="st_detail_inout">所属部门:</string>
    <string name="st_detail_company">派发人:</string>
    <string name="st_detail_worktime">派发时间:</string>
    <string name="st_detail_postion">工单状态:</string>
    <string name="st_detail_backreas">备注记录:</string>
    <string name="st_detail_ordertype">是否场内:</string>
    <string name="st_detail_order_content">是否转派:</string>
    <string name="st_detail_request">是否遗留:</string>
    <string name="st_detail_declare">短信内容</string>
    <!--设备详情信息-->
    <string name="st_equip_deviceid">设备ID：</string>
    <string name="st_equip_assetname">设备名称：</string>
    <string name="st_equip_assetcode">设备编号：</string>
    <string name="st_equip_assetmodel">设备型号：</string>
    <string name="st_equip_assettype">设备类别：</string>
    <string name="st_equip_manufacturer">生产厂商：</string>
    <string name="st_equip_factoryId">运维服务商：</string>
    <string name="st_equip_purchasetime">采购时间：</string>
    <string name="st_equip_engineering">工程商：</string>
    <string name="st_equip_installtime">安装时间：</string>
    <string name="st_equip_installplace">安装位置：</string>
    <string name="st_equip_serviceid">服务厂商：</string>

    <!--巡检详情信息-->
    <string name="st_tour_id">工单编号：</string>
    <string name="st_tour_deviceid">设备编号：</string>
    <string name="st_tour_time">巡检时间：</string>
    <string name="st_tour_reason">问题说明：</string>
    <string name="st_tour_note">记录：</string>
    <string name="st_tour_Checkingpeople">巡检人：</string>
    <!--工单异常信息-->
    <string name="st_detail_except">工单异常信息</string>
    <string name="st_detail_hardorder">上报人:</string>
    <string name="st_detail_isdown">上报时间:</string>
    <string name="st_detail_satisfaction">上报内容:</string>
    <!--工单关闭信息-->
    <string name="st_detail_close">工单关闭信息</string>
    <string name="st_detail_ordertime_type">关闭人:</string>
    <string name="st_detail_own">关闭时间:</string>
    <string name="st_detail_back_declare"> </string>
    <string name="project_remark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注:</string>
    <string name="st_detail_update_time">巡检说明:</string>
    <string name="st_detail_declare_t1">退回原因:</string>
    <string name="st_detail_declare_t2">处理说明:</string>
    <string name="st_detail_declare_t3">异常说明:</string>
    <!--SetServiceActivity-->
    <string name="st_set_serv_title">设置服务</string>
    <string name="st_set_serv_set">设置</string>
    <string name="st_set_serv_ip">IP地址:</string>
    <string name="st_set_serv_port">端口:</string>
    <string name="st_tour_code">设备编码:</string>


    <string name="police_account">用户名：%1$s</string>
    <string name="police_department">所属部门：%1$s</string>
    <string name="police_phone">联系方式：%1$s</string>


    <array name="Status">
        <item>"全 部"</item>
        <item>"已派发"</item>
        <item>"已接收"</item>
        <item>"已退回"</item>
        <item>"已转派"</item>
        <item>"已上报"</item>
        <item>"遗留中"</item>
        <item>"已关闭"</item>
        <item>"已评估"</item>
        <item>"已完成"</item>
    </array>


    <string name="deviceType">设备编号：</string>
    <string name="scanSize">预览尺寸</string>
    <string name="videoSize">视频尺寸</string>
    <string name="notifyIniError">识别初始化失败:</string>
    <string name="sdCardOut">SD卡被拨出，数据无法存储！</string>
    <string name="duijiao">正在扫描，请点击屏幕对焦……</string>
    <string name="fileSaveFailed">文件存储失败！</string>
    <string name="focusFailed">对焦失败，请重试！</string>
    <string name="no">无</string>
    <string name="font">宋体</string>
    <string name="textviewtime">时间</string>
    <string name="textviewaddress">地点</string>
    <string name="fileWriteError">文件写入失败！</string>

    <string name="ok">确认</string>
    <string name="cancel">取消</string>

    <string name="taking_pictures">拍照</string>
    <string name="photo_albums_select">从相册选取</string>
    <string name="btn_ok">完成(0)</string>
    <string name="publish_my_album">我的相册</string>
</resources>