<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--工单详情信息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding5"
        android:layout_marginRight="@dimen/margin_padding5"
        android:layout_marginTop="@dimen/margin_padding5"
        android:background="@drawable/business_detai_background"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding5">

        <TextView
            android:id="@+id/id_detail_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding10"
            android:gravity="center"
            android:text="@string/st_detail_detail"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize18" />

        <LinearLayout
            android:id="@+id/id_detail_tv_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
    <!--上面是工单详情信息-->
    <!--工单异常信息-->
    <LinearLayout
        android:id="@+id/id_detail_fragment_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding5"
        android:layout_marginRight="@dimen/margin_padding5"
        android:layout_marginTop="@dimen/margin_padding5"
        android:background="@drawable/business_detai_background"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding4"
            android:gravity="center"
            android:text="@string/st_detail_except"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize18" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_detail_hardorder"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize16" />

            <TextView
                android:id="@+id/tv_content15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_padding8"
                android:text=""
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_detail_isdown"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize16" />

            <TextView
                android:id="@+id/tv_content16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_padding8"
                android:text=""
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_detail_satisfaction"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize16" />

            <TextView
                android:id="@+id/tv_content17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_padding8"
                android:text=""
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize16" />
        </LinearLayout>
    </LinearLayout>
    <!--上面是异常上报信息-->

    <!--工单关闭信息-->
    <LinearLayout
        android:id="@+id/id_detail_fragment_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding5"
        android:layout_marginRight="@dimen/margin_padding5"
        android:layout_marginTop="@dimen/margin_padding5"
        android:background="@drawable/business_detai_background"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding4"
            android:gravity="center"
            android:text="@string/st_detail_close"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize18" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_detail_ordertime_type"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize16" />

            <TextView
                android:id="@+id/tv_content18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_padding8"
                android:text=""
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_detail_own"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize16" />

            <TextView
                android:id="@+id/tv_content19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_padding8"
                android:text=""
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_detail_back_declare"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize16" />

            <TextView
                android:id="@+id/tv_content20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_padding8"
                android:text=""
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize16" />
        </LinearLayout>
    </LinearLayout>
    <!--工单关闭信息-->
</LinearLayout>