<?xml version="1.0" encoding="utf-8"?><!--新增巡检页面布局-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xiangxun.workorder.widget.header.HeaderView
        android:id="@+id/id_tour_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.xiangxun.workorder.widget.scroll.WholeScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_tour_title"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding10"
            android:background="@drawable/publish_item_background"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/publish_item_background"
                android:padding="@dimen/margin_padding10"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设备名称:"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textSize16" />
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding10"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_order_name_click"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/publish_click_selector"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/tv_order_name"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_padding10"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:hint="请选择设备名称"
                            android:textColor="@color/color333333"
                            android:textColorHint="#cccccc"
                            android:textSize="@dimen/textSize15" />

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_gravity="bottom|right"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@mipmap/ic_tour_pull" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_publish_area_tip"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/publish_error_tip"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/publish_item_background"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_padding10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_detail_complainant_time"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textSize16" />

                <TextView
                    android:id="@+id/id_order_equip_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_padding8"
                    android:text=""
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/textSize16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/publish_item_background"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_padding10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_detail_complainant_tel"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textSize16" />

                <TextView
                    android:id="@+id/id_order_equip_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_padding8"
                    android:text=""
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/textSize16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/publish_item_background"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_padding10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_detail_come"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textSize16" />

                <TextView
                    android:id="@+id/id_order_equip_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_padding8"
                    android:text=""
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/textSize16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/publish_item_background"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_padding10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_detail_type"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textSize16" />

                <TextView
                    android:id="@+id/id_order_equip_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_padding8"
                    android:text=""
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/textSize16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/publish_item_background"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_padding10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_detail_inout"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textSize16" />

                <TextView
                    android:id="@+id/id_order_equip_deptment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_padding8"
                    android:text=""
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/textSize16" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/publish_item_background"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_padding10"
                android:orientation="vertical">

                <com.xiangxun.workorder.widget.grid.WholeGridView
                    android:id="@+id/id_order_equip_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding4"
                    android:numColumns="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_detail_update_time"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textSize16" />

                <EditText
                    android:id="@+id/id_order_equip_declare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/app_login_shape"
                    android:gravity="top"
                    android:minLines="4"
                    android:padding="@dimen/margin_padding8"
                    android:textColor="@color/color333333"
                    android:textSize="@dimen/textSize16" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/publish_item_background"
                />

        </LinearLayout>
    </com.xiangxun.workorder.widget.scroll.WholeScrollView>

</RelativeLayout>
